fix: update background color for contact section for better visibility

--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ body{
     top: 60px;
     height: 0;
     width: 300px;
-    background: rgb(255, 255, 255, 0.1);
+    background: rgba(27, 40, 221, 0.24);
     backdrop-filter: blur(100px);
     border-radius: 10px;
     overflow: hidden;
